--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     kapt 'com.google.dagger:dagger-compiler:2.26'
     kapt 'com.google.dagger:dagger-android-processor:2.26'
     implementation 'com.google.dagger:dagger-android-support:2.26'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
